[feat] add validation for excel uploads

--- a/public/index.html
+++ b/public/index.html
@@ -211,6 +211,9 @@
   <!-- App container where components will be rendered -->
   <div id="app-container"></div>
   
+  <!-- SheetJS library for Excel parsing -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  
   <!-- Load component scripts -->
   <script src="components/CardContainer.js"></script>
   <script src="components/AddAppCard.js"></script>
