[feat] add app list

--- a/public/index.html
+++ b/public/index.html
@@ -219,6 +219,7 @@
   <script src="components/AddAppCard.js"></script>
   <script src="components/DictionaryUploadCard.js"></script>
   <script src="components/AddSuccessRateCard.js"></script>
+  <script src="components/AppListCard.js"></script>
   <script src="components/App.js"></script>
   
   <script>
